[package]
name = "acid-state"
description = "easy persistence for rust"
license = "Apache-2.0"
version = "0.2.3"
authors = ["Tyler Neely <t@jujit.su>"]
repository = "https://github.com/spacejam/acid-state"
documentation = "https://docs.rs/acid-state/0.1.0/acid_state/index.html"
edition = "2018"

[[test]]
name = "test"
path = "test/test.rs"

[dependencies]
rustc-serialize = "0.3"
bincode = "0.5"
lazy_static = "0.2"
